@@ -1,1 +1,1 @@
-cv <- function(object, verbose = FALSE, ...)UseMethod("cv")
+cv <- function(object, folds = 10, verbose = FALSE, ...)UseMethod("cv")
