@@ -3,17 +3,18 @@
 \alias{cv}
 %- Also NEED an '\alias' for EACH other topic documented here.
 \title{
-Leave-one-out cross-validation for Morals fit
+Cross-validation for Morals fit
 }
 \description{
-Performs a LOOCV on Morals objects and returns the prediction RMSE.
+Performs a k-fold CV on Morals objects and returns the CV error.
 }
 \usage{
-cv(object, verbose = FALSE, ...)
+cv(object, folds = 10, verbose = FALSE, ...)
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
   \item{object}{Object of class \code{"morals"}}
+  \item{folds}{Number of folds for cross-validation (for LOOCV set it equal to n).}
   \item{verbose}{If \code{TRUE}, iteration is printed out}
   \item{...}{Additional arguments (ignored here)}
 }
@@ -26,7 +27,6 @@ xknots <- knotsGifi(neumann[,1:2], "E")
 yknots <- knotsGifi(neumann[,3], "E")
 fitlin <-  morals(neumann[,1:2], neumann[,3], xknots = xknots, yknots = yknots, xdegrees = 1, ydegrees = 1,
    xordinal = FALSE, yordinal = FALSE)
-cv(fitlin)  ## RSME prediction
-
+cv(fitlin)  ## CV error of prediction
 }
 \keyword{utilities}% use one of  RShowDoc("KEYWORDS")
